; ModuleID = '/home/carl/AnghaBench/vlc/src/network/extr_tls.c_vlc_tls_ClientSessionCreate.c'
source_filename = "/home/carl/AnghaBench/vlc/src/network/extr_tls.c_vlc_tls_ClientSessionCreate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { %struct.TYPE_16__* }
%struct.TYPE_16__ = type { i32 (%struct.TYPE_17__*, i8*, i8*, i8**)*, %struct.TYPE_17__* (%struct.TYPE_18__*, %struct.TYPE_17__*, i8*, i8**)* }
%struct.TYPE_17__ = type { %struct.TYPE_17__* }
%struct.pollfd = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"ipv4-timeout\00", align 1
@cleanup_tls = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"TLS session handshake error\00", align 1
@POLLIN = common dso_local global i32 0, align 4
@POLLOUT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [30 x i8] c"TLS session handshake timeout\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_17__* @vlc_tls_ClientSessionCreate(%struct.TYPE_18__* %0, %struct.TYPE_17__* %1, i8* %2, i8* %3, i8** %4, i8** %5) #0 {
  %7 = alloca %struct.TYPE_17__*, align 8
  %8 = alloca %struct.TYPE_18__*, align 8
  %9 = alloca %struct.TYPE_17__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8**, align 8
  %13 = alloca i8**, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_17__*, align 8
  %17 = alloca i64, align 8
  %18 = alloca [1 x %struct.pollfd], align 4
  %19 = alloca i64, align 8
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %8, align 8
  store %struct.TYPE_17__* %1, %struct.TYPE_17__** %9, align 8
  store i8* %2, i8** %10, align 8
  store i8* %3, i8** %11, align 8
  store i8** %4, i8*** %12, align 8
  store i8** %5, i8*** %13, align 8
  %20 = call i32 (...) @vlc_savecancel()
  store i32 %20, i32* %15, align 4
  %21 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_16__*, %struct.TYPE_16__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %23, i32 0, i32 1
  %25 = load %struct.TYPE_17__* (%struct.TYPE_18__*, %struct.TYPE_17__*, i8*, i8**)*, %struct.TYPE_17__* (%struct.TYPE_18__*, %struct.TYPE_17__*, i8*, i8**)** %24, align 8
  %26 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %27 = load %struct.TYPE_17__*, %struct.TYPE_17__** %9, align 8
  %28 = load i8*, i8** %10, align 8
  %29 = load i8**, i8*** %12, align 8
  %30 = call %struct.TYPE_17__* %25(%struct.TYPE_18__* %26, %struct.TYPE_17__* %27, i8* %28, i8** %29)
  store %struct.TYPE_17__* %30, %struct.TYPE_17__** %16, align 8
  %31 = load i32, i32* %15, align 4
  %32 = call i32 @vlc_restorecancel(i32 %31)
  %33 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %34 = icmp eq %struct.TYPE_17__* %33, null
  br i1 %34, label %35, label %36

35:                                               ; preds = %6
  store %struct.TYPE_17__* null, %struct.TYPE_17__** %7, align 8
  br label %126

36:                                               ; preds = %6
  %37 = load %struct.TYPE_17__*, %struct.TYPE_17__** %9, align 8
  %38 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %39 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %38, i32 0, i32 0
  store %struct.TYPE_17__* %37, %struct.TYPE_17__** %39, align 8
  %40 = call i32 (...) @vlc_savecancel()
  store i32 %40, i32* %15, align 4
  %41 = call i64 (...) @vlc_tick_now()
  store i64 %41, i64* %17, align 8
  %42 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %43 = call i32 @var_InheritInteger(%struct.TYPE_18__* %42, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %44 = call i64 @VLC_TICK_FROM_MS(i32 %43)
  %45 = load i64, i64* %17, align 8
  %46 = add nsw i64 %45, %44
  store i64 %46, i64* %17, align 8
  %47 = load i32, i32* @cleanup_tls, align 4
  %48 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %49 = call i32 @vlc_cleanup_push(i32 %47, %struct.TYPE_17__* %48)
  br label %50

50:                                               ; preds = %120, %36
  %51 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %52 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %51, i32 0, i32 0
  %53 = load %struct.TYPE_16__*, %struct.TYPE_16__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %53, i32 0, i32 0
  %55 = load i32 (%struct.TYPE_17__*, i8*, i8*, i8**)*, i32 (%struct.TYPE_17__*, i8*, i8*, i8**)** %54, align 8
  %56 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %57 = load i8*, i8** %10, align 8
  %58 = load i8*, i8** %11, align 8
  %59 = load i8**, i8*** %13, align 8
  %60 = call i32 %55(%struct.TYPE_17__* %56, i8* %57, i8* %58, i8** %59)
  store i32 %60, i32* %14, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %121

62:                                               ; preds = %50
  %63 = load i32, i32* %14, align 4
  %64 = icmp slt i32 %63, 0
  br i1 %64, label %68, label %65

65:                                               ; preds = %62
  %66 = call i64 (...) @vlc_killed()
  %67 = icmp ne i64 %66, 0
  br i1 %67, label %68, label %78

68:                                               ; preds = %65, %62
  %69 = load i32, i32* %14, align 4
  %70 = icmp slt i32 %69, 0
  br i1 %70, label %71, label %74

71:                                               ; preds = %68
  %72 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %73 = call i32 @msg_Err(%struct.TYPE_18__* %72, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0))
  br label %74

74:                                               ; preds = %71, %68
  br label %75

75:                                               ; preds = %117, %74
  %76 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  %77 = call i32 @vlc_tls_SessionDelete(%struct.TYPE_17__* %76)
  store %struct.TYPE_17__* null, %struct.TYPE_17__** %16, align 8
  br label %121

78:                                               ; preds = %65
  %79 = call i64 (...) @vlc_tick_now()
  store i64 %79, i64* %19, align 8
  %80 = load i64, i64* %19, align 8
  %81 = load i64, i64* %17, align 8
  %82 = icmp sgt i64 %80, %81
  br i1 %82, label %83, label %85

83:                                               ; preds = %78
  %84 = load i64, i64* %17, align 8
  store i64 %84, i64* %19, align 8
  br label %85

85:                                               ; preds = %83, %78
  %86 = load i32, i32* %14, align 4
  %87 = icmp sle i32 %86, 2
  %88 = zext i1 %87 to i32
  %89 = call i32 @assert(i32 %88)
  %90 = load i32, i32* %14, align 4
  %91 = icmp eq i32 %90, 1
  br i1 %91, label %92, label %94

92:                                               ; preds = %85
  %93 = load i32, i32* @POLLIN, align 4
  br label %96

94:                                               ; preds = %85
  %95 = load i32, i32* @POLLOUT, align 4
  br label %96

96:                                               ; preds = %94, %92
  %97 = phi i32 [ %93, %92 ], [ %95, %94 ]
  %98 = getelementptr inbounds [1 x %struct.pollfd], [1 x %struct.pollfd]* %18, i64 0, i64 0
  %99 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %98, i32 0, i32 0
  store i32 %97, i32* %99, align 4
  %100 = load %struct.TYPE_17__*, %struct.TYPE_17__** %9, align 8
  %101 = getelementptr inbounds [1 x %struct.pollfd], [1 x %struct.pollfd]* %18, i64 0, i64 0
  %102 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %101, i32 0, i32 0
  %103 = call i32 @vlc_tls_GetPollFD(%struct.TYPE_17__* %100, i32* %102)
  %104 = getelementptr inbounds [1 x %struct.pollfd], [1 x %struct.pollfd]* %18, i64 0, i64 0
  %105 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %104, i32 0, i32 1
  store i32 %103, i32* %105, align 4
  %106 = load i32, i32* %15, align 4
  %107 = call i32 @vlc_restorecancel(i32 %106)
  %108 = getelementptr inbounds [1 x %struct.pollfd], [1 x %struct.pollfd]* %18, i64 0, i64 0
  %109 = load i64, i64* %17, align 8
  %110 = load i64, i64* %19, align 8
  %111 = sub nsw i64 %109, %110
  %112 = call i32 @MS_FROM_VLC_TICK(i64 %111)
  %113 = call i32 @vlc_poll_i11e(%struct.pollfd* %108, i32 1, i32 %112)
  store i32 %113, i32* %14, align 4
  %114 = call i32 (...) @vlc_savecancel()
  store i32 %114, i32* %15, align 4
  %115 = load i32, i32* %14, align 4
  %116 = icmp eq i32 %115, 0
  br i1 %116, label %117, label %120

117:                                              ; preds = %96
  %118 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  %119 = call i32 @msg_Err(%struct.TYPE_18__* %118, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0))
  br label %75

120:                                              ; preds = %96
  br label %50

121:                                              ; preds = %75, %50
  %122 = call i32 (...) @vlc_cleanup_pop()
  %123 = load i32, i32* %15, align 4
  %124 = call i32 @vlc_restorecancel(i32 %123)
  %125 = load %struct.TYPE_17__*, %struct.TYPE_17__** %16, align 8
  store %struct.TYPE_17__* %125, %struct.TYPE_17__** %7, align 8
  br label %126

126:                                              ; preds = %121, %35
  %127 = load %struct.TYPE_17__*, %struct.TYPE_17__** %7, align 8
  ret %struct.TYPE_17__* %127
}

declare dso_local i32 @vlc_savecancel(...) #1

declare dso_local i32 @vlc_restorecancel(i32) #1

declare dso_local i64 @vlc_tick_now(...) #1

declare dso_local i64 @VLC_TICK_FROM_MS(i32) #1

declare dso_local i32 @var_InheritInteger(%struct.TYPE_18__*, i8*) #1

declare dso_local i32 @vlc_cleanup_push(i32, %struct.TYPE_17__*) #1

declare dso_local i64 @vlc_killed(...) #1

declare dso_local i32 @msg_Err(%struct.TYPE_18__*, i8*) #1

declare dso_local i32 @vlc_tls_SessionDelete(%struct.TYPE_17__*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_tls_GetPollFD(%struct.TYPE_17__*, i32*) #1

declare dso_local i32 @vlc_poll_i11e(%struct.pollfd*, i32, i32) #1

declare dso_local i32 @MS_FROM_VLC_TICK(i64) #1

declare dso_local i32 @vlc_cleanup_pop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
